# rust-microservices

./: .gitignore  Cargo.toml  README.md  config.yaml
core/: Cargo.toml
heimdallr/: Cargo.toml
heimdallr/migrations/2019-02-14-004529_create_users/: up.sql
heimdallr/src/: db.rs  http_server.rs  main.rs  password.rs
heimdallr/src/db/: models.rs  users.rs
heimdallr/src/http_server/: create_user.rs  user_login.rs
